event-listener.yaml
# TODO: Remove
# ---

# apiVersion: triggers.tekton.dev/v1alpha1
# kind: EventListener
# metadata:
#   name: hello-goodbye
# spec:
#   serviceAccountName: tekton
#   triggers:
#   - name: hello-goodbye
#     interceptors:
#     - webhook:
#         # header:
#         #   - name: param1
#         #     value: value1
#         #   - name: Foo-Trig-Header2
#         #     value:
#         #       - array-val1
#         #       - array-val2
#         objectRef:
#           kind: Service
#           name: gh-validate
#           apiVersion: v1
#           namespace: default
#     bindings:
#     - ref: hello-goodbye
#     template:
#       ref: hello-goodbye

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-goodbye
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-hello-goodbye
            port:
              number: 8080
